start command added in package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the mobile application of Dgi Business Hub",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/hectabit/dgi_business_hub/issues"
   },
-  "homepage": "https://github.com/hectabit/dgi_business_hub#readme"
+  "homepage": "https://github.com/hectabit/dgi_business_hub#readme",
+  "dependencies": {
+    "chalk": "^4.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
+  }
 }
