--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/hectabit/dgi_business_hub#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2"
   }
 }
