--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/hectabit/dgi_business_hub#readme",
   "dependencies": {
     "aws-sdk": "^2.963.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "chalk": "^4.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
